rust_test_framework/tests/compile_tests/should_fail/duplicate_params_stacked.stderr
error: Duplicate test case value found
 --> tests/compile_tests/should_fail/duplicate_params_stacked.rs:4:15
  |
4 | #[test_params(1)]
  |               ^
